--- a/软考/计组原+操作系统.md
+++ b/软考/计组原+操作系统.md
@@ -136,28 +136,6 @@ N = 尾数*基数^阶码
 
 
 
-# Kernel
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -250,25 +228,141 @@ N = 尾数*基数^阶码
 
 
 
-## 磁盘管理
 
 
+
+
+## 寄存器
+
+
+
+寄存器的功能是存储二进制代码,由具有存储功能的触发器组合构成
+
+一个触发器可以存储1位二进制代码，故存放n位二进制代码的寄存器，需用n个触发器来构成
+
+按照功能的不同，可将寄存器分为基本寄存器和移位寄存器两大类。基本寄存器只能并行送入数据，也只能并行输出。移位寄存器中的数据可以在移位脉冲作用下依次逐位右移或左移，数据既可以并行输入、并行输出，也可以串行输入、串行输出，还可以并行输入、串行输出，或串行输入、并行输出，十分灵活，用途也很广
+
+
+
+# 计算机系统组成
+
+
+
+![](image.assets/image-20200919110722563.png)
+
+
+
+==五大件==	控制器,运算器,存储器,输入,输出设备
+
+输⼊设备（⽐如键盘）和输出设备（⽐如显示屏）都属于外部设备。⽹卡、硬盘既可 以属于输⼊设备，也可以属于输出设备
+
+
+
+**Cpu由运算器,控制器,寄存器和内部总线组成**
+
+
+
+
+
+
+
+## 运算器
+
+负责在控制器的控制下完成各种运算
+
+
+
+| 4个组成部分       |                                      |
+| ----------------- | ------------------------------------ |
+| 算术逻辑单元ALU   | 算术运算和逻辑运算                   |
+| 累加寄存器AC      | 为算数逻辑提供临时空间，**暂存数据** |
+| 数据缓冲寄存器DR  | 写内存时，暂存指令或数据             |
+| 状态条件寄存器PSW | 存储状态/控制标志                    |
+
+
+
+## 控制器
+
+分析和执行指令的部件. 统一指挥其他部件的运行
+
+
+
+先把指令从内存储器取到**缓冲寄存器DR**，再送入**指令寄存器IR**暂存，**指令译码器**根据IR产生各种微操作指令，控制其他的组成部件工作
+
+| 4个组成部分  |                                   |
+| ------------ | --------------------------------- |
+| 程序计数器PC | 下条指令地址 ==唯一能被人为访问== |
+| 指令寄存器IR | 存放即将执行的指令                |
+| 指令译码器ID | 翻译指令中的操作码                |
+| 时序部件     | 提供时序控制信号                  |
+
+
+
+## 存储器
+
+
+
+### 主存储器(内存)
+
+存储现场操作的信息与中间结果, 包括机器指令和数据, **CPU可以直接读写主存**
+
+
+
+#### 随机存储器RAM	
+
+支持写入和读取, **断电后信息无法保存**
+
+
+
+RAM可以分为DRAM（Dynamic RAM，动态 RAM） 和 SRAM（Static RAM，静态 RAM）两种
+
+DRAM 的信息会随时间逐渐消失，因此需要定时对其进行刷新数据
+
+SRAM 在不断电的情况下信息能够一直保持而不会丢失
+
+
+
+#### 只读存储器ROM
+
+ROM只能读数据而不能写入, 断电后写入的内容也不会丢失
+
+
+
+* 掩膜ROM：不可编程ROM，属于第一代ROM，只能读，不能写。
+* PROM：可编程ROM,只能写一次
+  * 一个存储单元就是一个二极管和熔断丝，熔断丝导通的时代表1，通过烧录器把熔断丝烧断，电路不导通,实现单次的写入
+
+后续又基于ROM的技术推出了**可写入的ROM存储器**
+
+* EPROM：可编程ROM，紫外光可以多次擦除（可以写），速度慢，操作复杂
+
+* EEPROM：电可擦可编程只读存储器,**掉电后数据不丢失,一般用在即插即用**。（可以写），比EPROM方便
+
+
+
+
+
+### 辅助存储器(硬盘)
+
+存储需要长期保存的信息
+
+
+
+硬盘中存在多个磁盘片, 每个磁盘片对应上下两面的两个柱面, **每个柱面对应一个磁头**
+
+所有**磁头被一个公共的传动设备控制移动**, 单个磁头无法单独移动
+
+柱面由一圈圈的磁道组成, 最外层为0磁道. 越往内磁道越来越小,但密度越来越高,**磁道存储的数据一样多**
+
+磁道会被划分为若干个扇区, 每个扇区存放定长的数据(例如512字节), 扇区编号是从1开始的. 平均旋转半圈即可定位到目标扇区
+
+==磁盘访问时间 = 寻道时间(磁头移动到目标磁道) + 旋转延迟时间(磁盘片旋转到目标扇区)==
 
 ![](image.assets/image-20200829125405326.png)
 
 
 
-磁道越来越小,但密度越来越高,存储的数据一样多
 
-磁头通过磁道和扇区来确定到存储位置
-
-
-
-存取时间 = 寻道时间 + 旋转延迟时间 + 等待时间
-
-寻道时间	磁头移动到磁道
-
-等待时间	磁头移动到扇区
 
 
 
@@ -291,105 +385,6 @@ N = 尾数*基数^阶码
 
 
 
-
-## 寄存器
-
-
-
-寄存器的功能是存储二进制代码,由具有存储功能的触发器组合构成
-
-一个触发器可以存储1位二进制代码，故存放n位二进制代码的寄存器，需用n个触发器来构成
-
-按照功能的不同，可将寄存器分为基本寄存器和移位寄存器两大类。基本寄存器只能并行送入数据，也只能并行输出。移位寄存器中的数据可以在移位脉冲作用下依次逐位右移或左移，数据既可以并行输入、并行输出，也可以串行输入、串行输出，还可以并行输入、串行输出，或串行输入、并行输出，十分灵活，用途也很广
-
-
-
-
-
-
-
-## 存储器
-
-
-
-* 按所处的位置可分为内存和外存
-* 按构成存储器的材料
-  * 磁表面存储器  在金属或塑料基体的表面上涂一层磁性材料作为记录介质
-  * 光盘存储器  应用激光在磁光材料上进行读写的存储器  不易丢失,记录密度高,可互换性强
-  * 半导体存储器  体积小,功耗低,存取时间短
-* 分为磁存储器、半导体存储器和光存储器。
-* 按存储器的工作方式分为读写存储器和只读存储器。
-* 按访问方式可分为按地址访问和按内容访问的存储器。
-* 按寻址方式可分为
-  * 随机存储器RAM  任何一个存储单元都可以随机存取,并且存取时间和存储单元的物理位置无关  **主存的主要存储器**
-    * 静态SRAM  以触发器原理寄存信息,不需要刷新电路
-    * 动态DRAM  以电容充放电原理寄存信息 **系统内存**
-  * 只读存储器ROM  一般只进行读操作,用于保存,与RAM共同作为主存的一部分
-    * 掩膜ROM：不可编程ROM，属于第一代ROM，只能读，不能写。
-    * PROM：可编程ROM,只能写一次
-      * 一个存储单元就是一个二极管和熔断丝，熔断丝导通的时代表1，通过烧录器把熔断丝烧断，电路不导通,实现单次的写入
-    * EPROM：可编程ROM，紫外光可以多次擦除（可以写），速度慢，操作复杂
-    * EEPROM：电可擦可编程只读存储器,**掉电后数据不丢失,一般用在即插即用**。（可以写），比EPROM方便
-    * flash：即“闪存”，可以高速读写。被广泛使用
-  * 直接存储器
-  * 顺序/串行存储器  按物理位置的先后寻找地址(读写时间波动大)
-  * ==部分顺序访问 如磁盘== 先指定磁道(直接),然后再寻址(顺序)
-
-
-
-
-
-## 程序查询方式
-
-
-
-程序查询方式是通过**CPU执行程序**来查询状态的。 
-
-* DMA(Direct Memory Access，直接内存存取)
-  * 允许**不同速度**的硬件装置来沟通，而不需要依赖CPU的大量中断负载。否则，CPU 需要从来源把每一片段的资料复制到暂存器，然后把它们再次写回到新的地方。在这个时间中，CPU不可用
-
-
-
-# 计算机结构
-
-
-
-![](image.assets/image-20200919110722563.png)
-
-
-
-==五大件==	控制器,运算器,存储器,输入,输出设备
-
-硬盘属于辅助存储器
-
-输⼊设备（⽐如键盘）和输出设备（⽐如显示屏）都属于外部设备。⽹卡、硬盘这种既可 以属于输⼊设备，也可以属于输出设备
-
-
-
-
-
-**Cpu由运算器,控制器,寄存器和内部总线组成**
-
-
-
-* 运算器
-  * 算术逻辑单元ALU    负责算数/逻辑运算
-  * 累加寄存器AC       为算数逻辑提供临时空间，**暂存数据**
-  * ==数据缓冲寄存器DR==   写内存时，暂存指令或数据
-  * 状态条件寄存器     存状态/控制标志
-
-* 控制器
-  * 程序计数器PC    下条指令地址 ==唯一能被人为访问==
-  * 地址寄存器AR    cpu当前访问的指令地址
-  * 指令寄存器IR     存放正在执行的指令
-  * 指令译码器      翻译指令
-  * 时序部件        指令顺序
-
-先把指令从内存储器取到**缓冲寄存器DR**，再送入**指令寄存器IR**暂存，**指令译码器**根据IR产生各种微操作指令，控制其他的组成部件工作
-
-
-
-![](image.assets/计算机体系结构.png)
 
 
 
@@ -447,11 +442,95 @@ N = 尾数*基数^阶码
 
 
 
-## 体系结构分类 Flynn
+## 体系结构分类
 
+两种分类方法
 
+1. 冯•诺依曼提出**存储程序**的结构
+   * 硬件由**五大件**组成
+   * 采用二进制来表示指令和数据
+   * 将编号的程序实现存入存储器, 启动计算机就能运行程序
+
+2. Flynn分类法  根据指令流,数据流的多倍特征进行分类
+   * 指令流是指令的一串序列
+   * 数据流是指令流调用的数据序列, 包括输入数据和中间结果, 不包括输出数据
 
 ![](image.assets/image-20200919114901092.png)
+
+
+
+## 复杂/精简指令集系统
+
+**复杂指令集系统CISC**   Complex Instruction Set Computer
+
+增强指令的功能, 通过复杂的指令将一些原来由软件实现的功能改由硬件的指令系统实现
+
+
+
+特点
+
+1. 指令数量多, 并且大多数指令的使用频率低
+2. 支持多种寻址方式
+3. 指令长度不固定, 支持变长
+4. 指令可以对主存单元中的数据直接进行处理
+5. 以微程序控制为主, 难以用硬布线逻辑电路实现控制器
+
+
+
+**精简指令集系统RISC**   Reduced Instruction Set Computer
+
+尽量简化指令功能, 指令的操作能在单周期完成, 寻址方式尽可能地少, 编译效率高
+
+
+
+特点
+
+1. 指令数量少
+2. 寻址方式少, 通常只支持寄存器寻址方式、立即数寻址方式和相对寻址方 式
+3. 指令长度固定
+4. 以硬布线逻辑电路实现控制器
+5. 单周期指令执行，采用流水线技术. 大多数指令都能在一个机器周期内完成
+6. 利于编译器进行优化, 生成高效率的机器代码
+7. CPU 中的通用寄存器数量多
+
+
+
+## 总线
+
+一组能为多个部件**分时共享**的公共信息传送线路
+
+共享: 总线上可以挂接多个部件，各个部件通过这组公共线路交换信息
+
+分时: 同一时刻只允许**一个设备发送**,但允许**多个设备接收**
+
+
+
+按总线相对于CPU的位置, 可分为2类
+
+1. 内部总线  在CPU内部, 负责寄存器之间 和 算术逻辑部件ALU与控制部件 的数据交换
+2. 外部总线  CPU与内存/外设的数据交换
+
+**总线速度是制约计算机整体性能的最大因素**
+
+
+
+按总线功能来划分, 可分为3类
+
+* 数据总线DB	在CPU和RAM之间传输数据信息
+
+* 地址总线AB	传输地址信息
+
+* 控制总线CB	将微处理器控制信号传输到周边设备
+
+
+
+==字长为32,则地址总线和数据总线的宽度都为32==
+
+
+
+![](image.assets/计算机体系结构.png)
+
+
 
 
 
@@ -460,7 +539,7 @@ N = 尾数*基数^阶码
 
 
 * CPU	寄存器	最快,容量小,成本高
-* cache高速缓存    按内容存取
+* cache高速缓存   主存和CPU之间的一级Cache, 因为CPU的速度是存储器的上百倍, 为了平衡二者之间的速度而设置的缓存
 
 * 内存/主存	随机存储器RAM	只读存储器ROM
 
@@ -473,6 +552,10 @@ N = 尾数*基数^阶码
 * 虚拟存储器	比主存更大,可随机访问地址空间
 
 虚拟存储技术使==辅存和主存==密切配合，对用户来说，好像计算机具有一个容量比实际主存大得多的主存可供使用，因此称为虚拟存储器。**虚拟存储器的地址称为虚地址或逻辑地址**
+
+
+
+
 
 
 
@@ -531,33 +614,87 @@ cache组号+组内页号+页内地址
 
 
 
-## 主存
+
+
+
+
+## 局部性原理
+
+**时间局部性**	在一个较短的时间内, 程序所执行的指令可能被重复执行(循环)
+
+**空间局部性**	访问了某个存储单元后, 其相邻的存储单位大概率也会在后续被访问到
+
+
+
+## 数据存取方式
+
+
+
+### 顺序存取
+
+使用一个**共享的读写装置**进行存取, 对数据的读写只能是**线性顺序**. 例如**磁带**存储器
+
+| N    | N+1  | N+2  | N+3  | N+4  | N+5  | N+6  | N+7  | ...... |
+| ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ------ |
+
+例如要读取地址N+7的数据，那么就需要从地址N开始，一路往右走去搜索地址N+7在哪里
+
+
+
+### 直接存取
+
+用**数据块**封装了一块连续的地址索引, 每个数据块都拥有唯一的地址标识. 使用共享的读写装置**直接移动到目标数据块**进行访问. 例如**磁盘**存储器
+
+![](image.assets/de67bfe59b9c93f2f2a61c198f407b6a.png)
+
+例如要读取地址N+7的数据，就直接在第三数据块的首地址N+6开始往右找
+
+
+
+### 随机存取
+
+存储器的每个存储单元都有**独立的读写装置**, 可以对任意一个存储单元进行直接访问. 例如**主存储器**
+
+| N+0  | N+1  | N+2  | N+3  | N+4  | N+5  | N+6  | N+7  | ...... |
+| ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ------ |
+
+例如要读取地址N+7的数据，则直接用地址N+7的读写装置把数据拿出来
+
+
+
+### 相联存取
+
+也是随机存取的一种, 每个可寻址单元都有自己的读写装置。**通过存取数据的内容决定访问的地址**. 例如**Cache**
+
+![](image.assets/e7f698ee55401e1203f2b9e2effd96fe.png)    
+
+例如通过职工号5199109, 来决定访问地址为n+1的数据
+
+
 
 
 
 ## 编址与计算
 
+存储器中每个单元的位数是固定的，称为存储器编址单位(也就是每个内存地址可以存储多少 bit 的信息)
 
-
-按字编址	存储单元是字
+按字编址	存储单元是字（字的长度可大可小，例如 16 位或 者 32 位)
 
 按字节编址	存储单元字节
 
-
-
-所需芯片数=总容量/芯片容量
+![](image.assets/image-20240801161357969.png)
 
 
 
 ![](image.assets/QQ拼音截图20201003203621.png)
 
-400H =2^10
+(43FFH - 4000H) **+ 1** = 400H = 2^10个地址
 
 又因为存储单元为16位
 
-总容量=2^10*16bit
+总容量 = 2^10*16bit
 
-芯片容量=2^10*16bit/4
+芯片容量 = 总容量 / 芯片数 = 2^10*16bit/4
 
 
 
@@ -573,35 +710,9 @@ cache组号+组内页号+页内地址
 
 
 
-# 总线
 
 
 
-主线同一时刻只允许**一个设备发送**,但允许**多个设备接收**
-
-
-
-* 数据总线DB	在CPU和RAM之间传输数据
-
-* 地址总线AB	指定RAM中存储数据的地址
-
-* 控制总线CB	将微处理器控制单元的信号传送到周边设备
-
-
-
-==字长为32,则地址总线和数据总线的宽度都为32==
-
-
-
-## 并联串联
-
-
-
-
-
-![](image.assets/image-20201004095929871.png)
-
-并联	R=1-（1-R1）*（1-R2）......
 
 
 
